parser.c
/**
 * parser.c
 * 
 * @brief Syntax and semantic analysis. Parsing expressions.
 * 
 * @author Petr Růžanský <xruzan00>
 *         Radek Maňák <xmanak20>
 *         Adrián Babola <xbabol00>
 * 
 */

#include "parser.h"
#include "scanner.h"
#include "token.h"
#include "return-codes.h"
#include "stdbool.h"
#include "codegen.h"
#include "symtable.h"
#include "string.h"
#include "precedence.c"
#include "symstack.h"
#include "symtablestack.h"
#include "token_stack.h"

bool is_EOL = false;
bool EOL_allowed = true;
bool second_token = false;
int return_code;
Token token;
Token prev_token;
Symtable_node_ptr global_symbol_table;
Symtable_item *current_function;
int global_temporary_variable_counter = 0;
int param_counter;
Symstack *expression_result_stack;
Symtable_stack *symtable_stack;

tTokenStack idStack;

// Load next token, check the return code and check if EOL is allowed.
#define NEXT()                              \
    {                                       \
        is_EOL = false;                     \
        while (1)                           \
        {                                   \
            next_token(&token);             \
            if (token.token_type == TT_ERR) \
            {                               \
                return LEXICAL_ERROR;       \
            }                               \
            if (token.token_type == TT_EOL) \
            {                               \
                if (EOL_allowed)            \
                {                           \
                    is_EOL = true;          \
                    continue;               \
                }                           \
                else                        \
                {                           \
                    break;                  \
                }                           \
            }                               \
            break;                          \
        }                                   \
    }

#define NEXT_WITH_EOL() \
{                       \
    next_token(&token); \
    if (token.token_type == TT_ERR) \
    {                   \
        return LEXICAL_ERROR;       \
    }                   \
}                      \

// Compare actual token with TOK and then call and compare next token.
#define CHECK_AND_LOAD_TOKEN(TOK)             \
    {                                         \
        if (second_token == true)             \
        {                                     \
            if (prev_token.token_type != TOK) \
            {                                 \
                return SYNTAX_ERROR;          \
            }                                 \
            second_token = false;             \
        }                                     \
        else                                  \
        {                                     \
            if (token.token_type != TOK)      \
            {                                 \
                return SYNTAX_ERROR;          \
            }                                 \
            NEXT();                           \
        }                                     \
    }

// Call function FUN and check return code.
#define CHECK_AND_CALL_FUNCTION(FUN) \
    {                                \
        return_code = FUN;           \
        if (return_code != OK)       \
        {                            \
            return return_code;      \
        }                            \
    }

// Init nonterminal states:
int Func_param_n();
int For_declr();
int Else();
int Id_n();
int Expresion();
int Expression_n();
int Declr();
int Types_n();
int Func_param();
int State();
int State_id();
int State_data_type();
int Types();
int Params_n();
int Param();
int Stat_list();
int Ret_types();
int Params();
int Func();
int Body();
int Preamble();
int Start();

int fast_func();
int fast_param(Symtable_item *function);
int fast_params(Symtable_item *function);
int fast_params_n(Symtable_item *function);
int fast_ret_types(Symtable_item *function);
int fast_types(Symtable_item *function);
int fast_state_data_type(Symtable_item *function);
int fast_types_n(Symtable_item *function);
/////////////////////////////

// NONTERMINAL STATES

int For_declr()
{
    switch (token.token_type)
    {
    case TT_IDENTIFIER:
        // Rule: <for_declr> -> <declr> ;
        CHECK_AND_CALL_FUNCTION(Declr());

        CHECK_AND_LOAD_TOKEN(TT_SEMICOLON);
        return OK;
        break;
    case TT_SEMICOLON:
        // Rule: <for_declr> -> ;

        CHECK_AND_LOAD_TOKEN(TT_SEMICOLON);

        return OK;
        break;
    default:
        return SYNTAX_ERROR;
        break;
    }
}
int Id_n()
{
    switch (token.token_type)
    {
    case TT_COMMA:
        // Rule: <id_n> -> , id <id_n>

        CHECK_AND_LOAD_TOKEN(TT_COMMA);

        if (token.token_type == TT_IDENTIFIER){
            tokenStackPush(&idStack, token);
        }
        CHECK_AND_LOAD_TOKEN(TT_IDENTIFIER);

        CHECK_AND_CALL_FUNCTION(Id_n());

        return OK;
    case TT_ASSIGNMENT:
    case TT_DECLARATION_ASSIGNMENT:
    case TT_OPEN_PARENTHESES:
        // Rule: <id_n> -> eps

        return OK;

    default:
        return SYNTAX_ERROR;
        break;
    }
}

int Else()
{
    switch (token.token_type)
    {
        // case TT_IDENTIFIER:
        // case TT_CLOSE_BRACES:
        // case TT_KEYWORD_IF:
        // case TT_KEYWORD_FOR:
        // case TT_KEYWORD_RETURN:

        //     // Rule: <else> -> eps
        //     return OK;
        //     break;

    case TT_KEYWORD_ELSE:
        // Rule: <else> -> else { <stat_list> }

        CHECK_AND_LOAD_TOKEN(TT_KEYWORD_ELSE);

        CHECK_AND_LOAD_TOKEN(TT_OPEN_BRACES);
        Symtable_node_ptr localtab_else = NULL;
        Symtable_init(&localtab_else);
        Symtable_stack_insert(symtable_stack, localtab_else);

        CHECK_AND_CALL_FUNCTION(Stat_list());

        CHECK_AND_LOAD_TOKEN(TT_CLOSE_BRACES);
        Symtable_node_ptr helper = Symtable_stack_pop(symtable_stack);
        Symtable_dispose(&helper);

        return OK;
        break;

    default:
        return SYNTAX_ERROR;

        break;
    }
}

Symtable_item *create_shift()
{
    Symtable_item *shift = create_item();
    shift->token.token_type = TT_SHIFT;
    return shift;
}

Symtable_item *find_terminal_top(Symstack *symstack)
{
    for (int i = symstack->top; i >= 0; i--)
    {
        Symtable_item *item = *(symstack->stack + i);
        switch (item->token.token_type)
        {
        case TT_SHIFT:
        case TT_NONTERMINAL:
            break;
        default:
            return item;
        }
    }
    return NULL;
}

void insert_shift(Symstack *symstack, Symtable_item *item)
{
    Symstack *temp_stack;
    Symstack_init(&temp_stack);
    for (int i = symstack->top; i >= 0; i--)
    {
        Symtable_item *current_item = *(symstack->stack + i);
        if (current_item == item)
        {
            Symstack_insert(symstack, create_shift());
            break;
        }
        else
        {
            Symstack_insert(temp_stack, Symstack_pop(symstack));
        }
    }
    while (!Symstack_empty(temp_stack))
    {
        Symstack_insert(symstack, Symstack_pop(temp_stack));
    }
    Symstack_dispose(&temp_stack);
}

int shift_position(Symstack *symstack)
{
    for (int i = symstack->top; i > 0; i--)
    {
        Symtable_item *current_item = *(symstack->stack + i);
        if (current_item->token.token_type != TT_SHIFT)
        {
            continue;
        }
        return i;
    }
    return -1;
}

int parse_expression_binary_operation(Symstack *symstack, int operator_pos)
{
    if (symstack->top != operator_pos + 1)
    {
        return SYNTAX_ERROR;
    }
    Symtable_item *right_item = Symstack_pop(symstack);
    Symtable_item *operator_item = Symstack_pop(symstack);
    Symtable_item *left_item = Symstack_pop(symstack);
    Symtable_item *shift = Symstack_pop(symstack);

    char *nonterminal_identifier = malloc(sizeof(char) * 20);
    sprintf(nonterminal_identifier, "expr-var%d", global_temporary_variable_counter++);
    generate_declaration("LF@", nonterminal_identifier);
    generate_arithmetic_operation(operator_item->token.token_type, nonterminal_identifier, left_item->token.attribute.string,
                                  right_item->token.attribute.string);
    free(left_item->token.attribute.string);
    left_item->token.attribute.string = nonterminal_identifier;

    if (shift->token.token_type != TT_SHIFT)
    {
        return INTERNAL_ERROR;
    }
    free_symtable_item(shift);
    Symstack_insert(symstack, left_item);
    return OK;
}

int convert_int_to_literal(char *out, int64_t integer)
{
    sprintf(out, "int@%ld", integer);
    return 0;
}

int convert_double_to_literal(char *out, double double_num)
{
    sprintf(out, "float@%a", double_num);
    return 0;
}

int convert_string_to_literal(char *out, const char *string, size_t length)
{
    size_t out_max_length = length * 1.5;
    sprintf(out, "string@");
    int out_position = 7; //set position after prefix
    for (int i = 0; i < length; i++)
    {
        if (out_position + 5 > out_max_length)
        { // If there is chance to not fit allocate more space
            out_max_length = out_max_length * 1.2;
            if (out_max_length < 10)
            { // At least 10 chars minimum for small string edge cases
                out_max_length = 10;
            }
            if (realloc(out, out_max_length) == NULL)
            {
                return -1;
            }
        }
        char ch = string[i];
        if (ch >= 0 && ch <= 32 || ch == 35 || ch == 92)
        {
            char escape_sequence[5];
            sprintf(escape_sequence, "\\%.3d", ch);
            out[out_position++] = escape_sequence[0];
            out[out_position++] = escape_sequence[1];
            out[out_position++] = escape_sequence[2];
            out[out_position++] = escape_sequence[3];
        }
        else
        {
            out[out_position] = ch;
            out_position++;
        }
    }
    out[out_position] = 0; //ending null byte
    return 0;
}

int parse_literal(Symstack *symstack)
{
    Symtable_item *literal = Symstack_pop(symstack);
    Symtable_item *shift = Symstack_pop(symstack);

    char *nonterminal_identifier = malloc(sizeof(char) * 20);
    sprintf(nonterminal_identifier, "expr-var%d", global_temporary_variable_counter++);
    generate_declaration("LF@", nonterminal_identifier);

    char *value_literal;
    switch (literal->token.token_type)
    {
    case TT_FLOATING_LITERAL:
        literal->dataType[0] = DT_FLOAT;
        value_literal = malloc(sizeof(char) * 150);
        convert_double_to_literal(value_literal, literal->token.attribute.floating);
        generate_move("LF@", nonterminal_identifier, "", value_literal);
        break;
    case TT_STRING_LITERAl:
        literal->dataType[0] = DT_STRING;
        size_t length = strlen(literal->token.attribute.string);
        value_literal = malloc(sizeof(char) * (size_t)(length * 1.5));
        convert_string_to_literal(value_literal, literal->token.attribute.string, length);
        generate_move("LF@", nonterminal_identifier, "", value_literal);
        break;
    case TT_INTEGER_LITERAL:
        literal->dataType[0] = DT_INT;
        value_literal = malloc(sizeof(char) * 150);
        convert_int_to_literal(value_literal, literal->token.attribute.integer);
        generate_move("LF@", nonterminal_identifier, "", value_literal);
        break;
    default:
        return SYNTAX_ERROR;
    }
    literal->token.token_type = TT_NONTERMINAL;
    literal->token.attribute.string = nonterminal_identifier;

    free(value_literal);
    free_symtable_item(shift);
    Symstack_insert(symstack, literal);
    return OK;
}

int parse_expression_parentheses(Symstack *symstack)
{
    Symtable_item *right_parentheses = Symstack_pop(symstack);
    Symtable_item *nonterminal = Symstack_pop(symstack);
    Symtable_item *left_parentheses = Symstack_pop(symstack);
    Symtable_item *shift = Symstack_pop(symstack);

    free_symtable_item(right_parentheses);
    free_symtable_item(left_parentheses);
    free_symtable_item(shift);
    Symstack_insert(symstack, nonterminal);
    return OK;
}

int parse_expression_id(Symstack *symstack)
{
    Symtable_item *identifier = Symstack_pop(symstack);
    Symtable_item *shift = Symstack_pop(symstack);
    identifier->token.token_type = TT_NONTERMINAL;

    char *local_name =
        malloc(sizeof(char) * strlen(identifier->token.attribute.string) + 1);
    strcpy(local_name, identifier->token.attribute.string);
    Symtable_item* variable = Symtable_stack_lookup(symtable_stack, local_name);
    if (variable == NULL){
        return SEMANTIC_ERROR_UNDEFINED_VARIABLE;
    }
    identifier->dataType[0] = variable->dataType[0];

    free_symtable_item(shift);
    Symstack_insert(symstack, identifier);
    return OK;
}

int parse_expresion_rule(Symstack *symstack, int shift_pos)
{
    int current_pos = shift_pos + 1;
    if (current_pos > symstack->top)
    {
        return SYNTAX_ERROR;
    }
    switch ((*(symstack->stack + current_pos))->token.token_type)
    {
    case TT_NONTERMINAL:
        current_pos++;
        if (current_pos > symstack->top)
        {
            return SYNTAX_ERROR;
        }
        switch ((*(symstack->stack + current_pos))->token.token_type)
        {
        case TT_PLUS:
            //E -> E+E
            return parse_expression_binary_operation(symstack, current_pos);
        case TT_MINUS:
            //E -> E-E
            return parse_expression_binary_operation(symstack, current_pos);
        case TT_ASTERISK:
            //E -> E*E
            return parse_expression_binary_operation(symstack, current_pos);
        case TT_SLASH:
            //E -> E/E
            return parse_expression_binary_operation(symstack, current_pos);
        case TT_LESS:
        case TT_LESS_OR_EQUALS:
        case TT_GREATER:
        case TT_GREATER_OR_EQUALS:
        case TT_EQUALS:
            // E -> E compare E
            return parse_expression_binary_operation(symstack, current_pos);
        default:
            return SYNTAX_ERROR;
        }
    case TT_OPEN_PARENTHESES:
        //E -> (E)
        return parse_expression_parentheses(symstack);
    case TT_INTEGER_LITERAL:
    case TT_STRING_LITERAl:
    case TT_FLOATING_LITERAL:
        return parse_literal(symstack);
    case TT_IDENTIFIER:
        // E -> id+
        return parse_expression_id(symstack);
        // MAYBE FUNEXP?
        break;
    default:
        return SYNTAX_ERROR;
    }
    return SYNTAX_ERROR;
}

bool is_precedence_end(Token_type tokenType)
{
    switch (tokenType)
    {
    case TT_OPEN_PARENTHESES:
    case TT_CLOSE_PARENTHESES:
    case TT_IDENTIFIER:
    case TT_STRING_LITERAl:
    case TT_INTEGER_LITERAL:
    case TT_FLOATING_LITERAL:
    case TT_PLUS:
    case TT_MINUS:
    case TT_ASTERISK:
    case TT_SLASH:
    case TT_SEMICOLON:
    case TT_EQUALS:
    case TT_NOT_EQUALS:
    case TT_LESS_OR_EQUALS:
    case TT_GREATER_OR_EQUALS:
    case TT_LESS:
    case TT_GREATER:
        return false;
    default:
        return true;
    }
}

int Expresion()
{
    Symstack *symstack;
    Symstack_init(&symstack);
    Symtable_item *stop = create_item();
    stop->token.token_type = TT_STOP;
    Symstack_insert(symstack, stop);
    int shift_pos;
    int parentheses_depth = 0;

    bool end_found = false;
    Symtable_item *a, *b;
    do
    {
        a = find_terminal_top(symstack);
        b = create_item();
        if (is_precedence_end(token.token_type) || parentheses_depth == 0 && token.token_type == TT_CLOSE_PARENTHESES)
        {
            b->token.token_type = TT_STOP;
            end_found = true;
        }
        else
        {
            if (token.token_type == TT_OPEN_PARENTHESES){
                parentheses_depth++;
            } else if (token.token_type == TT_CLOSE_PARENTHESES){
                parentheses_depth--;
            }
            b->token.token_type = token.token_type;
            b->token.attribute = token.attribute;
        }
        switch (precedence_lookup(a->token.token_type, b->token.token_type))
        {
        case PRECEDENCE_E:
            Symstack_insert(symstack, b);
            if (!end_found)
            {
                NEXT_WITH_EOL()
            }
            break;
        case PRECEDENCE_L:
            insert_shift(symstack, a);
            Symstack_insert(symstack, b);
            if (!end_found)
            {
                NEXT_WITH_EOL()
            }
            break;
        case PRECEDENCE_G:
            shift_pos = shift_position(symstack);
            if (shift_pos != -1)
            {
                parse_expresion_rule(symstack, shift_pos);
            }
            else
            {
                return SYNTAX_ERROR;
            }
            free_symtable_item(b);
            break;
        case PRECEDENCE_X:
            return SYNTAX_ERROR;
        }
    } while (!(end_found && find_terminal_top(symstack)->token.token_type == TT_STOP));

    // Move result to known variable
    Symtable_item *result = Symstack_pop(symstack);
    Symstack_insert(expression_result_stack, result);

    Symstack_dispose(&symstack);
    return OK;
}

int Expression_n()
{
    switch (token.token_type)
    {
    case TT_CLOSE_BRACES:
    case TT_EOL:
        // Rule: <Expression_n> -> eps
        return OK;
    case TT_COMMA:
        // Rule: <Expression_n> -> , <Expression> <Expression_n>
        CHECK_AND_LOAD_TOKEN(TT_COMMA)
        CHECK_AND_CALL_FUNCTION(Expresion())
        CHECK_AND_CALL_FUNCTION(Expression_n())
        break;
    default:
        return SYNTAX_ERROR;
    }

    return OK;
}

void function_call(Symtable_item* function){
    generate_frame();
    if (strcmp(function->token.attribute.string, "print") == 0){
        // print takes arguments from stack
        char arg_count[10];
        sprintf(arg_count, "%d", expression_result_stack->top+1);
        generate_declaration("TF@", "%1");
        generate_move("TF@", "%1", "int@", arg_count);
        for (int i = expression_result_stack->top; i >= 0; i--) {
            generate_push("LF@", expression_result_stack->stack[i]->token.attribute.string);
        }
    } else {
        for (int i = 0; i <= expression_result_stack->top; ++i) {
            char argument[10];
            sprintf(argument, "%%%d", i+1);
            generate_declaration("TF@", argument);
            generate_move("TF@", argument, "LF@", expression_result_stack->stack[i]->token.attribute.string);
        }
    }
    Symstack_dispose(&expression_result_stack);
    Symstack_init(&expression_result_stack);
    generate_function_call(function->token.attribute.string);
    // Create objecct with called function name and store in expression result
    Symtable_item* function_result = create_item_copy(function);
    Symstack_insert(expression_result_stack, function_result);
}

int function_call_return(Symtable_item* function) {
    if (function == NULL){
        return SEMANTIC_ERROR_FUNCTION;
    }
    for (int i = 0; i < function->parameter_count; i++) {
        Symtable_item *identifier = Symtable_search(*Symtable_stack_head(symtable_stack), idStack.tokens[i].attribute.string);
        if (identifier != NULL) {
            return SEMANTIC_ERROR_UNDEFINED_VARIABLE; //REDEFINED
        }
        generate_declaration("LF@", idStack.tokens[i].attribute.string);
        identifier = create_item();
        identifier->token.token_type = TT_IDENTIFIER;
        identifier->token.attribute.string = malloc(
                sizeof(char) * strlen(idStack.tokens[i].attribute.string) + 1);
        identifier->dataType[0] = function->parameters[i].dataType;
        strcpy(identifier->token.attribute.string, idStack.tokens[i].attribute.string);
        Symtable_insert(Symtable_stack_head(symtable_stack), identifier->token.attribute.string, identifier);

        char argument[10];
        sprintf(argument, "%d", i + 1);
        generate_move("LF@", idStack.tokens[i].attribute.string, "TF@%retval", argument);
        expression_result_stack->stack[i]->parameters[i];
    }
    return OK;
}

int expression_or_function_call(){
    if (token.token_type == TT_IDENTIFIER){
        Symtable_item* function = Symtable_search(global_symbol_table, token.attribute.string);
        if (function != NULL){
            // Is function. Call move parameters to temporary frame and call it.
            CHECK_AND_LOAD_TOKEN(TT_IDENTIFIER);
            CHECK_AND_LOAD_TOKEN(TT_OPEN_PARENTHESES)
            CHECK_AND_CALL_FUNCTION(Func_param())
            // Fills expression_result_stack with parameter variables
            CHECK_AND_LOAD_TOKEN(TT_CLOSE_PARENTHESES);
            function_call(function);
        } else {
            // Variable not a function
            CHECK_AND_CALL_FUNCTION(Expresion())
        }
    } else {
        // Likely a literal value or error
        CHECK_AND_CALL_FUNCTION(Expresion())
    }

    if (token.token_type == TT_EOL){
        // EOL token ends expression
        NEXT()
        is_EOL = true;
    }
    if (!is_EOL){
        CHECK_AND_CALL_FUNCTION(Expression_n())
    }
    return OK;
}

int move_return_values_from_function(bool declaration_forbidden){
    int lvalue_counter = 0;
    for (int i = 0; i <= expression_result_stack->top; ++i) {
        if (expression_result_stack->stack[i]->isfunction){
            // Obtain full global function item from "reference"
            Symtable_item *called_function = Symtable_search(global_symbol_table, expression_result_stack->stack[i]->token.attribute.string);
            CHECK_AND_CALL_FUNCTION(function_call_return(called_function))
        } else {
            Symtable_item* identifier = Symtable_stack_lookup(symtable_stack, idStack.tokens[lvalue_counter].attribute.string);
            if (identifier == NULL){
                if (declaration_forbidden){
                    return SEMANTIC_ERROR_UNDEFINED_VARIABLE;
                }
                generate_declaration("LF@", idStack.tokens[lvalue_counter].attribute.string);
                identifier = create_item();
                identifier->token.token_type = TT_IDENTIFIER;
                identifier->token.attribute.string = malloc(sizeof(char)*strlen(idStack.tokens[lvalue_counter].attribute.string)+1);
                identifier->dataType[0] = expression_result_stack->stack[i]->dataType[0];
                strcpy(identifier->token.attribute.string, idStack.tokens[lvalue_counter].attribute.string);
                Symtable_insert(Symtable_stack_head(symtable_stack), identifier->token.attribute.string, identifier);
            }
            generate_move("LF@", idStack.tokens[lvalue_counter].attribute.string, "LF@", expression_result_stack->stack[i]->token.attribute.string);
            lvalue_counter++;
        }
    }

    while (!tokenStackEmpty(&idStack)){
        tokenStackPop(&idStack);
    }
    Symstack_dispose(&expression_result_stack);
    Symstack_init(&expression_result_stack);
    return OK;
}

int Declr() {
    // Rule: <declr> -> := <expr>
    CHECK_AND_LOAD_TOKEN(TT_DECLARATION_ASSIGNMENT)

    CHECK_AND_CALL_FUNCTION(expression_or_function_call());

    CHECK_AND_CALL_FUNCTION(move_return_values_from_function(false))

    return OK;
}

int Types_n()
{
    switch (token.token_type)
    {
    case TT_CLOSE_PARENTHESES:
        // Rule: <types_n> -> eps
        return OK;
        break;

    case TT_COMMA:
        // Rule: <types_n> -> , <data_type> <types_n>
        CHECK_AND_LOAD_TOKEN(TT_COMMA);

        CHECK_AND_CALL_FUNCTION(State_data_type());

        CHECK_AND_CALL_FUNCTION(Types_n());
        return OK;
        break;

    default:
        return SYNTAX_ERROR;
        break;
    }
}

int Func_param_n()
{
    switch (token.token_type)
    {
    case TT_CLOSE_PARENTHESES:

        // Rule: <Func_param_n> -> eps

        return OK;
        break;

    case TT_COMMA:
        // Rule: <Func_param> -> , <expression> <func_param_n>

        CHECK_AND_LOAD_TOKEN(TT_COMMA);
        CHECK_AND_CALL_FUNCTION(Expresion());
        CHECK_AND_CALL_FUNCTION(Func_param_n());
        return OK;
        break;

    default:
        return SYNTAX_ERROR;
        break;
    }
}

int Func_param()
{
    switch (token.token_type)
    {
    case TT_IDENTIFIER:
    case TT_OPEN_PARENTHESES:
    case TT_PLUS:
    case TT_MINUS:
    case TT_ASTERISK:
    case TT_SLASH:
    case TT_INTEGER_LITERAL:
    case TT_STRING_LITERAl:
    case TT_FLOATING_LITERAL:

        // Rule: <Func_param> -> <expr> <func_param_n>

        CHECK_AND_CALL_FUNCTION(Expresion());
        CHECK_AND_CALL_FUNCTION(Func_param_n());
        return OK;
        break;

    case TT_CLOSE_PARENTHESES:
        // Rule: <Func_param> -> eps
        return OK;
        break;

    default:
        return SYNTAX_ERROR;
        break;
    }
}

int State()
{
    Symtable_node_ptr localtab_if_for = NULL;
    Symtable_init(&localtab_if_for);
    Symtable_node_ptr stack_pop_helper = NULL;
    switch (token.token_type)
    {
    case TT_IDENTIFIER:
        // Rule: <state> -> id <state_id>
        tokenStackPush(&idStack, token);
        NEXT()
        CHECK_AND_CALL_FUNCTION(State_id())
        break;

    case TT_KEYWORD_IF:
        // Rule: <state> -> if <expr> { <stat_list> } <else>

        CHECK_AND_LOAD_TOKEN(TT_KEYWORD_IF);

        CHECK_AND_CALL_FUNCTION(Expresion());

        CHECK_AND_LOAD_TOKEN(TT_OPEN_BRACES);
        Symtable_stack_insert(symtable_stack, localtab_if_for);

        CHECK_AND_CALL_FUNCTION(Stat_list());

        CHECK_AND_LOAD_TOKEN(TT_CLOSE_BRACES);
        stack_pop_helper = Symtable_stack_pop(symtable_stack);
        Symtable_dispose(&stack_pop_helper);
        CHECK_AND_CALL_FUNCTION(Else());

        return OK;
        break;

    case TT_KEYWORD_FOR:
        // Rule: <state> -> for <for_declr> <expr> ; <expr> { <stat_list> }
        CHECK_AND_LOAD_TOKEN(TT_KEYWORD_FOR);

        CHECK_AND_CALL_FUNCTION(For_declr());

        CHECK_AND_CALL_FUNCTION(Expresion());

        CHECK_AND_LOAD_TOKEN(TT_SEMICOLON);

        CHECK_AND_CALL_FUNCTION(Expresion());

        CHECK_AND_LOAD_TOKEN(TT_OPEN_BRACES);
        Symtable_stack_insert(symtable_stack, localtab_if_for);

        CHECK_AND_CALL_FUNCTION(Stat_list());

        CHECK_AND_LOAD_TOKEN(TT_CLOSE_BRACES);
        stack_pop_helper = Symtable_stack_pop(symtable_stack);
        Symtable_dispose(&stack_pop_helper);
        return OK;
        break;

    case TT_KEYWORD_RETURN:
        // Rule: <state> -> return <expr>
        CHECK_AND_LOAD_TOKEN(TT_KEYWORD_RETURN);

        CHECK_AND_CALL_FUNCTION(Expresion())

        CHECK_AND_CALL_FUNCTION(Expression_n())
        if (token.token_type == TT_EOL){
            NEXT()
            is_EOL = true;
        } else {
            return SYNTAX_ERROR;
        }

        if (current_function->return_values_count != expression_result_stack->top + 1)
        {
            fprintf(stderr, "Semantic error in function %s: Expected %d return values but found %d values instead\n",
                    current_function->token.attribute.string, current_function->return_values_count,
                    expression_result_stack->top + 1);
            return SEMANTIC_ERROR_FUNCTION;
        }
        for (int i = 0; i < current_function->return_values_count; i++)
        {
            if (expression_result_stack->stack[i]->dataType[0] != current_function->dataType[i])
            {
                fprintf(stderr, "Semantic error in function %s: Return variable datatype does not match!\n",
                        current_function->token.attribute.string);
                return SEMANTIC_ERROR_FUNCTION;
            }
            generate_return_move(expression_result_stack->stack[i]->token.attribute.string, i + 1);
        }
        Symstack_dispose(&expression_result_stack);
        Symstack_init(&expression_result_stack);

        return OK;
        break;

    default:
        return SYNTAX_ERROR;
        break;
    }
    return OK;
}

int State_id(){
    CHECK_AND_CALL_FUNCTION(Id_n())
    if (token.token_type == TT_DECLARATION_ASSIGNMENT) {
        // Rule: <state_id> -> <Id_n> := <declr>

        CHECK_AND_CALL_FUNCTION(Declr())
        return OK;
    } else if (token.token_type == TT_ASSIGNMENT) {
        // Rule: <state_id> -> <Id_n> = <expr>

        CHECK_AND_LOAD_TOKEN(TT_ASSIGNMENT)
        CHECK_AND_CALL_FUNCTION(expression_or_function_call());
        CHECK_AND_CALL_FUNCTION(move_return_values_from_function(true))

        return OK;
    } else if (token.token_type == TT_OPEN_PARENTHESES) {
        // Rule: <state_id> -> ( <func_param> )
        if (idStack.top != 0){
            return SYNTAX_ERROR;
            // Function call in lvalue
            // eg: id, call() :=
        }
        CHECK_AND_LOAD_TOKEN(TT_OPEN_PARENTHESES)
        CHECK_AND_CALL_FUNCTION(Func_param())
        CHECK_AND_LOAD_TOKEN(TT_CLOSE_PARENTHESES)
        Token id_token;
        tokenStackTop(&idStack, &id_token);
        tokenStackPop(&idStack);
        Symtable_item* function = Symtable_search(global_symbol_table, id_token.attribute.string);
        function_call(function);

        return OK;
    }

    return SYNTAX_ERROR;
}

int State_data_type()
{
    switch (token.token_type)
    {
    case TT_KEYWORD_INT:
        // Rule: <data_type> -> int
        CHECK_AND_LOAD_TOKEN(TT_KEYWORD_INT);
        return OK;
        break;

    case TT_KEYWORD_STRING:
        // Rule: <data_type> -> string
        CHECK_AND_LOAD_TOKEN(TT_KEYWORD_STRING);
        return OK;
        break;

    case TT_KEYWORD_FLOAT64:
        // Rule: <data_type> -> float
        CHECK_AND_LOAD_TOKEN(TT_KEYWORD_FLOAT64);
        return OK;
        break;

    default:
        return SYNTAX_ERROR;
        break;
    }
}

int Types()
{
    switch (token.token_type)
    {
    case TT_CLOSE_PARENTHESES:
        // Rule: <types> -> eps

        return OK;
        break;

    case TT_KEYWORD_INT:
    case TT_KEYWORD_STRING:
    case TT_KEYWORD_FLOAT64:
        // Rule: <types> -> <data_type> <types_n>

        CHECK_AND_CALL_FUNCTION(State_data_type());
        CHECK_AND_CALL_FUNCTION(Types_n());
        return OK;
        break;

    default:

        return SYNTAX_ERROR;
        break;
    }
}

int Params_n()
{
    switch (token.token_type)
    {
    case TT_CLOSE_PARENTHESES:
        // Rule: <params_n> -> eps
        return OK;
        break;

    case TT_COMMA:
        // Rule: <params_n> -> , <param> <params_n>
        CHECK_AND_LOAD_TOKEN(TT_COMMA);

        CHECK_AND_CALL_FUNCTION(Param());

        CHECK_AND_CALL_FUNCTION(Params_n());
        return OK;
        break;
    default:
        return SYNTAX_ERROR;
        break;
    }
}

int Param()
{
    // Rule: <param> -> id <data_type>
    CHECK_AND_LOAD_TOKEN(TT_IDENTIFIER);

    CHECK_AND_CALL_FUNCTION(State_data_type());
    generate_func_param(current_function->parameters[param_counter].identifier, param_counter + 1);
    param_counter++;

    return OK;
}

int Stat_list()
{

    switch (token.token_type)
    {
    case TT_IDENTIFIER:
    case TT_KEYWORD_IF:
    case TT_KEYWORD_FOR:
    case TT_KEYWORD_RETURN:
        // Rule: <statl> -> <state> <stat_list>
        CHECK_AND_CALL_FUNCTION(State());

        if (is_EOL != true)
        {
            return SYNTAX_ERROR;
        }
        else
        {
            is_EOL = false;
        }

        CHECK_AND_CALL_FUNCTION(Stat_list());
        return OK;
    case TT_CLOSE_BRACES:
        // Rule: <statl> -> eps

        return OK;
        break;

    default:
        return SYNTAX_ERROR;
        break;
    }
}

int Ret_types()
{
    switch (token.token_type)
    {
    case TT_OPEN_PARENTHESES:
        // Rule: <ret_types> -> ( <types> )

        CHECK_AND_LOAD_TOKEN(TT_OPEN_PARENTHESES);

        CHECK_AND_CALL_FUNCTION(Types());

        CHECK_AND_LOAD_TOKEN(TT_CLOSE_PARENTHESES);

        return OK;
        break;

    case TT_OPEN_BRACES:
        // Rule: <ret_types> -> eps
        return OK;
        break;

    case TT_KEYWORD_INT:
    case TT_KEYWORD_STRING:
    case TT_KEYWORD_FLOAT64:
        // Rule: <ret_types> -> <data_type>
        CHECK_AND_CALL_FUNCTION(State_data_type());

        return OK;
        break;
